restructure cli commands to use the internal api
